--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,82 @@
 .link {
   text-decoration: none;
 }
+/* =======WebStudio======== */
+/* =======Header========== */
+.main-header {
+  background: #ffffff;
+}
+.link {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 0.07;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.contact {
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 0.7;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+/* ======Main=========== */
+.first-section {
+  background: #2e2f42;
+}
+.main-title {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 56px;
+  line-height: 0.93;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+}
+.btn {
+  color: #ffffff;
+  background: #4d5ae5;
+  cursor: pointer;
+}
+.title {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 0.83;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.text {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 0.7;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+.section-title {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 0.9;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+/* =======Footer========= */
+.footer {
+  background: #2e2f42;
+}
+.color-text {
+  color: #e7e9fc;
+}
