--- a/css/styles.css
+++ b/css/styles.css
@@ -6,36 +6,42 @@
   text-decoration: none;
 }
 /* =======WebStudio======== */
+.body {
+  font-family: 'Roboto', sans-serif;
+  background: #ffffff;
+}
 /* =======Header========== */
 .main-header {
   background: #ffffff;
 }
 .link {
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
   font-weight: 600;
   font-size: 16px;
-  line-height: 0.07;
+  line-height: 0.7;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
 .contact {
-  text-decoration: none;
-  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 0.7;
+  line-height: 24px;
   letter-spacing: 0.02em;
   color: #434455;
+  text-decoration: none;
 }
-/* ======Main=========== */
-.first-section {
+.contact:hover {
+  color: red;
+}
+.contact:focus {
+  color: green;
+}
+/* =======Main=========== */
+/* =======hero section======= */
+.hero-section {
   background: #2e2f42;
 }
 .main-title {
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
   font-weight: 600;
   font-size: 56px;
   line-height: 0.93;
@@ -48,9 +54,11 @@
   background: #4d5ae5;
   cursor: pointer;
 }
+/* =========second section========= */
+.menu-item {
+  list-style: none;
+}
 .title {
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
   font-weight: 600;
   font-size: 20px;
   line-height: 0.83;
@@ -58,17 +66,14 @@
   color: #2e2f42;
 }
 .text {
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 0.7;
   letter-spacing: 0.02em;
   color: #434455;
 }
+/* =========third section======= */
 .section-title {
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
   font-weight: 600;
   font-size: 36px;
   line-height: 0.9;
@@ -77,10 +82,17 @@
   text-transform: capitalize;
   color: #2e2f42;
 }
+.menu-item {
+  text-decoration: none;
+}
+/* ==========fourth section======= */
+.fourth-section-color {
+  background: #f4f4fd;
+}
 /* =======Footer========= */
 .footer {
   background: #2e2f42;
 }
 .color-text {
-  color: #e7e9fc;
+  background: #e7e9fc;
 }
