--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,25 @@
 .main-header {
   background: #ffffff;
 }
+.head-logo-web {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 0.75;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
+.head-logo-studio {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 0.75;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #2e2f42;
+}
 .link {
   font-weight: 600;
   font-size: 16px;
@@ -95,4 +114,22 @@
 }
 .color-text {
   background: #e7e9fc;
+}
+.logo-web {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 0.85;
+  letter-spacing: 0.03;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
+.logo-studio {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 0.85;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #f4f4fd;
 }
