--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 0.67;
   letter-spacing: 0.02em;
   color: #434455;
   text-decoration: none;
