--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/* jgdlgkj */
 .list {
   list-style: none;
 }
@@ -18,7 +17,7 @@
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
   font-size: 18px;
-  line-height: 0.75;
+  line-height: 1.33;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
@@ -26,9 +25,8 @@
 .head-logo-studio {
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
-  font-weight: 800;
   font-size: 18px;
-  line-height: 0.75;
+  line-height: 1.33;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #2e2f42;
@@ -36,7 +34,7 @@
 .link {
   font-weight: 600;
   font-size: 16px;
-  line-height: 0.7;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
@@ -44,7 +42,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 0.67;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
   text-decoration: none;
@@ -63,8 +61,7 @@
 .main-title {
   font-weight: 600;
   font-size: 56px;
-  line-height: 0.93;
-  text-align: center;
+  line-height: 1.07;
   letter-spacing: 0.02em;
   color: #ffffff;
 }
@@ -81,14 +78,14 @@
 .title {
   font-weight: 600;
   font-size: 20px;
-  line-height: 0.83;
+  line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
 .text {
   font-weight: 400;
   font-size: 16px;
-  line-height: 0.7;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
@@ -96,7 +93,7 @@
 .section-title {
   font-weight: 600;
   font-size: 36px;
-  line-height: 0.9;
+  line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
@@ -120,7 +117,7 @@
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
   font-size: 18px;
-  line-height: 0.85;
+  line-height: 1, 17;
   letter-spacing: 0.03;
   text-transform: uppercase;
   color: #4d5ae5;
@@ -129,7 +126,7 @@
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
   font-size: 18px;
-  line-height: 0.85;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #f4f4fd;
