--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,6 @@
   color: #4d5ae5;
 }
 .contact {
-  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -136,7 +135,7 @@
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
   font-size: 18px;
-  line-height: 1, 17;
+  line-height: 1.17;
   letter-spacing: 0.03;
   text-transform: uppercase;
   color: #4d5ae5;
