--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,11 @@
   text-decoration: none;
 }
 /* =======WebStudio======== */
-.body-page {
+.body {
   font-family: 'Roboto', sans-serif;
+  font-size: 16px;
   color: #ffffff;
+  background: #e5e5e5;
 }
 /* =======Header========== */
 .main-header {
@@ -32,8 +34,7 @@
   color: #2e2f42;
 }
 .link {
-  font-weight: 600;
-  font-size: 16px;
+  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
@@ -46,7 +47,6 @@
 }
 .contact {
   font-weight: 400;
-  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
@@ -64,27 +64,29 @@
   background: #2e2f42;
 }
 .main-title {
-  font-weight: 600;
+  font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   color: #ffffff;
 }
 .btn {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   color: #4d5ae5;
   background: #f4f4fd;
   cursor: pointer;
 }
-.btn:hover {
-  color: #ffffff;
-  background: #4d5ae5;
-}
-.btn:focus {
-  color: #ffffff;
-  background: #4d5ae5;
-}
+.btn:hover,
+.btn:focus,
 .btn:active {
   color: #ffffff;
+  background: #4d5ae5;
+}
+
+.btn:active {
   background: #404bbf;
 }
 
@@ -92,6 +94,12 @@
   list-style: none;
 }
 /* =========second section========= */
+.secret-name {
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+}
 
 .title {
   font-weight: 600;
@@ -102,7 +110,6 @@
 }
 .text {
   font-weight: 400;
-  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
