--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,7 @@
   background: #2e2f42;
 }
 .main-title {
+  font-family: 'Roboto', sans-serif;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
@@ -122,12 +123,10 @@
 /* =========third section======= */
 .section-title {
   font-family: 'Roboto';
-  font-weight: 500;
+  font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
-  text-align: center;
   letter-spacing: 0.02em;
-  text-transform: capitalize;
   color: #2e2f42;
 }
 .menu-item {
