--- a/css/styles.css
+++ b/css/styles.css
@@ -31,11 +31,10 @@
 }
 
 /* =======WebStudio======== */
-.body {
+body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   color: #ffffff;
-  background: #e5e5e5;
 }
 /* =======WebStudio======== */
 /* =======Header========== */
@@ -49,7 +48,6 @@
   color: #2e2f42;
 }
 .link {
-  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -61,7 +59,6 @@
 }
 
 .contact {
-  font-family: 'Roboto', sans-serif;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -79,7 +76,6 @@
   background: #2e2f42;
 }
 .main-title {
-  font-family: 'Roboto', sans-serif;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
@@ -87,7 +83,6 @@
   color: #ffffff;
 }
 .btn {
-  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
@@ -115,7 +110,6 @@
 }
 
 .title {
-  font-family: 'Roboto', sans-serif;
   font-weight: 600;
   font-size: 20px;
   line-height: 1.2;
@@ -123,7 +117,6 @@
   color: #2e2f42;
 }
 .text {
-  font-family: 'Roboto', sans-serif;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -131,7 +124,6 @@
 }
 /* =========third section======= */
 .section-title {
-  font-family: 'Roboto', sans-serif;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -159,7 +151,6 @@
 /* -------Portfolio-------- */
 /* -------Mane Page-------- */
 .subtitle {
-  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
