--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,6 @@ body {
   font-size: 16px;
   color: #ffffff;
 }
-/* =======WebStudio======== */
 /* =======Header========== */
 .main-header {
   background: #ffffff;
@@ -83,6 +82,7 @@ body {
   color: #ffffff;
 }
 .btn {
+  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
