--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,7 @@ body {
 }
 .btn {
   font-family: 'Roboto', sans-serif;
+  font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
